@@ -2,17 +2,15 @@ package edu.alibaba.mpc4j.s2pc.aby.basics.zl.bea91;
 
 import edu.alibaba.mpc4j.common.circuit.zl.MpcZlVector;
 import edu.alibaba.mpc4j.common.rpc.*;
-import edu.alibaba.mpc4j.common.rpc.utils.DataPacket;
-import edu.alibaba.mpc4j.common.rpc.utils.DataPacketHeader;
 import edu.alibaba.mpc4j.common.tool.galoisfield.zl.Zl;
 import edu.alibaba.mpc4j.common.tool.utils.BigIntegerUtils;
 import edu.alibaba.mpc4j.common.structure.vector.ZlVector;
 import edu.alibaba.mpc4j.s2pc.aby.basics.zl.AbstractZlcParty;
 import edu.alibaba.mpc4j.s2pc.aby.basics.zl.SquareZlVector;
 import edu.alibaba.mpc4j.s2pc.aby.basics.zl.bea91.Bea91ZlcPtoDesc.PtoStep;
-import edu.alibaba.mpc4j.s2pc.pcg.mtg.zl.ZlMtgFactory;
-import edu.alibaba.mpc4j.s2pc.pcg.mtg.zl.ZlMtgParty;
-import edu.alibaba.mpc4j.s2pc.pcg.mtg.zl.ZlTriple;
+import edu.alibaba.mpc4j.s2pc.aby.pcg.triple.ZlTriple;
+import edu.alibaba.mpc4j.s2pc.aby.pcg.triple.zl.ZlTripleGenFactory;
+import edu.alibaba.mpc4j.s2pc.aby.pcg.triple.zl.ZlTripleGenParty;
 
 import java.math.BigInteger;
 import java.util.Arrays;
@@ -30,32 +28,21 @@ public class Bea91ZlcSender extends AbstractZlcParty {
     /**
      * multiplication triple generator
      */
-    private final ZlMtgParty mtgSender;
+    private final ZlTripleGenParty zlTripleGenSender;
 
     public Bea91ZlcSender(Rpc senderRpc, Party receiverParty, Bea91ZlcConfig config) {
         super(Bea91ZlcPtoDesc.getInstance(), senderRpc, receiverParty, config);
-        mtgSender = ZlMtgFactory.createSender(senderRpc, receiverParty, config.getMtgConfig());
-        addSubPto(mtgSender);
-    }
-
-    public Bea91ZlcSender(Rpc senderRpc, Party receiverParty, Party aiderParty, Bea91ZlcConfig config) {
-        super(Bea91ZlcPtoDesc.getInstance(), senderRpc, receiverParty, config);
-        mtgSender = ZlMtgFactory.createSender(senderRpc, receiverParty, aiderParty, config.getMtgConfig());
-        addSubPto(mtgSender);
+        zlTripleGenSender = ZlTripleGenFactory.createSender(senderRpc, receiverParty, config.getZlTripleGenConfig());
+        addSubPto(zlTripleGenSender);
     }
 
     @Override
-    public Zl getZl() {
-        return zl;
-    }
-
-    @Override
-    public void init(int updateNum) throws MpcAbortException {
-        setInitInput(updateNum);
+    public void init(int maxL, int expectTotalNum) throws MpcAbortException {
+        setInitInput(maxL, expectTotalNum);
         logPhaseInfo(PtoState.INIT_BEGIN);
 
         stopWatch.start();
-        mtgSender.init(updateNum);
+        zlTripleGenSender.init(maxL, expectTotalNum);
         stopWatch.stop();
         long initTime = stopWatch.getTime(TimeUnit.MILLISECONDS);
         stopWatch.reset();
@@ -70,16 +57,14 @@ public class Bea91ZlcSender extends AbstractZlcParty {
         logPhaseInfo(PtoState.PTO_BEGIN, "send share");
 
         stopWatch.start();
+        Zl zl = x0.getZl();
+        int byteL = zl.getByteL();
         ZlVector x0Vector = ZlVector.createRandom(zl, num, secureRandom);
         ZlVector x1Vector = x0.sub(x0Vector);
         List<byte[]> x1Payload = Arrays.stream(x1Vector.getElements())
             .map(element -> BigIntegerUtils.nonNegBigIntegerToByteArray(element, byteL))
             .collect(Collectors.toList());
-        DataPacketHeader x1Header = new DataPacketHeader(
-            encodeTaskId, getPtoDesc().getPtoId(), PtoStep.SENDER_SEND_INPUT_SHARE.ordinal(), extraInfo,
-            ownParty().getPartyId(), otherParty().getPartyId()
-        );
-        rpc.send(DataPacket.fromByteArrayList(x1Header, x1Payload));
+        sendOtherPartyPayload(PtoStep.SENDER_SEND_INPUT_SHARE.ordinal(), x1Payload);
         stopWatch.stop();
         long shareTime = stopWatch.getTime(TimeUnit.MILLISECONDS);
         stopWatch.reset();
@@ -90,16 +75,13 @@ public class Bea91ZlcSender extends AbstractZlcParty {
     }
 
     @Override
-    public SquareZlVector shareOther(int num) throws MpcAbortException {
-        setShareOtherInput(num);
+    public SquareZlVector shareOther(Zl zl, int num) throws MpcAbortException {
+        setShareOtherInput(zl, num);
         logPhaseInfo(PtoState.PTO_BEGIN, "receive share");
 
+        List<byte[]> x0Payload = receiveOtherPartyPayload(PtoStep.RECEIVER_SEND_INPUT_SHARE.ordinal());
+
         stopWatch.start();
-        DataPacketHeader x0Header = new DataPacketHeader(
-            encodeTaskId, getPtoDesc().getPtoId(), PtoStep.RECEIVER_SEND_INPUT_SHARE.ordinal(), extraInfo,
-            otherParty().getPartyId(), ownParty().getPartyId()
-        );
-        List<byte[]> x0Payload = rpc.receive(x0Header).getPayload();
         MpcAbortPreconditions.checkArgument(x0Payload.size() == num);
         BigInteger[] x0Array = x0Payload.stream()
             .map(BigIntegerUtils::byteArrayToNonNegBigInteger)
@@ -123,13 +105,11 @@ public class Bea91ZlcSender extends AbstractZlcParty {
         } else {
             logPhaseInfo(PtoState.PTO_BEGIN, "receive share");
 
+            List<byte[]> x1Payload = receiveOtherPartyPayload(PtoStep.RECEIVER_SEND_OUTPUT_SHARE.ordinal());
+
             stopWatch.start();
-            DataPacketHeader x1Header = new DataPacketHeader(
-                encodeTaskId, getPtoDesc().getPtoId(), PtoStep.RECEIVER_SEND_OUTPUT_SHARE.ordinal(), extraInfo,
-                otherParty().getPartyId(), ownParty().getPartyId()
-            );
-            List<byte[]> x1Payload = rpc.receive(x1Header).getPayload();
             MpcAbortPreconditions.checkArgument(x1Payload.size() == num);
+            Zl zl = x0.getZl();
             BigInteger[] x1Array = x1Payload.stream()
                 .map(BigIntegerUtils::byteArrayToNonNegBigInteger)
                 .toArray(BigInteger[]::new);
@@ -153,14 +133,12 @@ public class Bea91ZlcSender extends AbstractZlcParty {
             logPhaseInfo(PtoState.PTO_BEGIN, "send share");
 
             stopWatch.start();
+            Zl zl = x0.getZl();
+            int byteL = zl.getByteL();
             List<byte[]> x0Payload = Arrays.stream(x0.getZlVector().getElements())
                 .map(element -> BigIntegerUtils.nonNegBigIntegerToByteArray(element, byteL))
                 .collect(Collectors.toList());
-            DataPacketHeader x0Header = new DataPacketHeader(
-                encodeTaskId, getPtoDesc().getPtoId(), PtoStep.SENDER_SEND_OUTPUT_SHARE.ordinal(), extraInfo,
-                ownParty().getPartyId(), otherParty().getPartyId()
-            );
-            rpc.send(DataPacket.fromByteArrayList(x0Header, x0Payload));
+            sendOtherPartyPayload(PtoStep.SENDER_SEND_OUTPUT_SHARE.ordinal(), x0Payload);
             stopWatch.stop();
             long revealTime = stopWatch.getTime(TimeUnit.MILLISECONDS);
             stopWatch.reset();
@@ -248,7 +226,9 @@ public class Bea91ZlcSender extends AbstractZlcParty {
             logPhaseInfo(PtoState.PTO_BEGIN, "mul");
 
             stopWatch.start();
-            ZlTriple triple = mtgSender.generate(num);
+            Zl zl = x0.getZl();
+            int byteL = zl.getByteL();
+            ZlTriple triple = zlTripleGenSender.generate(zl, num);
             stopWatch.stop();
             long mtgTime = stopWatch.getTime(TimeUnit.MILLISECONDS);
             stopWatch.reset();
@@ -268,24 +248,17 @@ public class Bea91ZlcSender extends AbstractZlcParty {
                 .collect(Collectors.toList());
             List<byte[]> f0Payload = Arrays.stream(f0.getElements())
                 .map(element -> BigIntegerUtils.nonNegBigIntegerToByteArray(element, byteL))
-                .collect(Collectors.toList());
+                .toList();
             e0f0Payload.addAll(f0Payload);
-            DataPacketHeader e0f0Header = new DataPacketHeader(
-                encodeTaskId, getPtoDesc().getPtoId(), PtoStep.SENDER_SEND_E0_F0.ordinal(), extraInfo,
-                ownParty().getPartyId(), otherParty().getPartyId()
-            );
-            rpc.send(DataPacket.fromByteArrayList(e0f0Header, e0f0Payload));
+            sendOtherPartyPayload(PtoStep.SENDER_SEND_E0_F0.ordinal(), e0f0Payload);
             stopWatch.stop();
             long e0f0Time = stopWatch.getTime(TimeUnit.MILLISECONDS);
             stopWatch.reset();
             logStepInfo(PtoState.PTO_STEP, 2, 3, e0f0Time, "mul (open e/f)");
 
+            List<byte[]> e1f1Payload = receiveOtherPartyPayload(PtoStep.RECEIVER_SEND_E1_F1.ordinal());
+
             stopWatch.start();
-            DataPacketHeader e1f1Header = new DataPacketHeader(
-                encodeTaskId, getPtoDesc().getPtoId(), PtoStep.RECEIVER_SEND_E1_F1.ordinal(), extraInfo,
-                otherParty().getPartyId(), ownParty().getPartyId()
-            );
-            List<byte[]> e1f1Payload = rpc.receive(e1f1Header).getPayload();
             MpcAbortPreconditions.checkArgument(e1f1Payload.size() == 2 * num);
             BigInteger[] e1f1 = e1f1Payload.stream()
                 .map(BigIntegerUtils::byteArrayToNonNegBigInteger)
